<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="cheese_ipsum"></string>
    <string name="checkin">Checkin</string>
    <string name="menu_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="content_authority_posts">co.samepinch.android.app.posts</string>
    <string name="content_authority_users">co.samepinch.android.app.users</string>

    <string name="sample_data">"Some data %1$d"</string>
    <string name="standard_app_bar_menu_title">Standard app bar</string>
    <string name="tabs_menu_title">Tabs</string>
    <string name="flexible_space_with_image_menu_title">Flexible space with image</string>
    <string name="flexible_space_menu_title">Flexible space app bar</string>
    <string name="navigation_drawer_open" translatable="false" />
    <string name="navigation_drawer_close" translatable="false" />
    <string name="sample_email">sample.user@email.com</string>
    <string name="not_implemented_yet">Not implemented yet</string>
    <string name="contact_desc">contact photo</string>
    <string name="desc_list_item_left_icon">desc_list_item_icon</string>
    <string name="image_desc">image_desc</string>
    <string name="some_folder">Some folder</string>
    <string name="sample_name">User Name</string>
    <string name="pop_title">Pop</string>
    <string name="indie_title">Indie</string>
    <string name="rock_title">Rock</string>
    <string name="r8b_title"><![CDATA[R&B]]></string>
    <string name="not_title_set">No title set</string>
    <string name="floating_action_button">Floating action button</string>

    <!-- SAMEPINCH specifics -->
    <string name="app_name">SamePinch</string>
    <!-- pinch handle-->
    <string name="pinch_handle">\u0040<xliff:g id="handle">%1$s</xliff:g></string>
    <string name="terms_n_cond">Terms \u0026 Conditions</string>
    <string name="enter_comment">enter your comment here\u2026</string>
    <string name="enter_post">type here\u2026</string>
    <string name="select_tags">tag this post with</string>
    <string name="enter_here">enter here\u2026</string>
    <string name="enter_comment_actionLabel">Submit</string>
    <string name="profile_picture_desc">Profile picture</string>
    <string name="welcome_title">Welcome to SamePinch</string>
    <string name="welcome_sub_title">SamePinch is created by idealists who believe in new era of social networking where people engage with others on a wide variety of topics. Imagine a virtual wall where you can post anything you like (even as anonymous) and community is watching, learning and commenting.</string>
    <string name="sign_in_label">Sign in</string>
    <string name="save_label">Save</string>
    <string name="post_create_label">post</string>
    <string name="post_as_you">as you</string>
    <string name="post_as_anonymous">as anonymous</string>

    <string name="post_edit_label">update</string>
    <string name="post_del_label">delete</string>
    <string name="post_del_pop_title">Delete post?</string>
    <string name="post_del_pop_desc">Deleted post may not be recovered. You loose complete data including likes, comments, views, etc. Better yet, you can choose to edit.</string>
    <string name="post_del_positive">OK</string>
    <string name="post_del_negative">Cancel</string>

    <string name="contd_sign_in_label">continue</string>
    <string name="manage_account_label">Manage account</string>
    <string name="sign_out_label">Sign out</string>
    <string name="sign_in_email_hint">email@samepinch.co</string>

    <!--<string name="fb_app_id">1646195582278585</string>-->
    <string name="facebook_app_id">1636478616583615</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close">Close</string>
    <string name="status_signed_out">Signed out</string>
    <string name="play_services_error">Google Play services is not available.  This application will close.</string>
    <string name="signin_with_google">Sign in with Google</string>
    <string name="signin_with_fb">Sign in with Facebook</string>
    <string name="loading">\u2026</string>
    <string name="loading_with_text">Loading\u2026</string>
    <string name="by">post by\u0009</string>
    <string name="empty"></string>
    <string name="settings_notifs">Push Notifications</string>
    <string name="settings_notifs_subline">set when you want to get notified</string>
    <string name="settings_notifs_posts">Posts I made</string>
    <string name="settings_notifs_posts_likes">Posts I am interested-in (like posts by me or someone I like, etc.)</string>
    <string name="settings_notifs_posts_likes_tags">Posts into tags I am currently subscribed to</string>
    <string name="settings_email">Email Settings</string>
    <string name="settings_email_subline">subscription allows you to get email digests, important communication, etc. </string>
    <string name="settings_email_subscribe">Subscribe</string>

    <!-- SHARE -->
    <string name="share_subject">I\u0027ve started using SamePinch app\u0021</string>
    <string name="share_body">Thought you may be interested to check out this app I am in love with.\u000A\u000AGet your copy from Android\u002FApple store. \u000A\u000AA SamePinch Fan \u000Awww.samepinch.co</string>

    <!-- FEEDBACK -->
    <string name="feedback_to">friends@samepinch.co</string>
    <string name="feedback_subject">SamePinch Feedback</string>

    <!-- FLAG -->
    <string name="flag_title">Flag as</string>
    <string name="flag_btn_choose">Send</string>
    <string name="flag_btn_cancel">Cancel</string>

    <!-- CHANGE PASSWORD -->
    <string name="change_password_title">Change Password</string>
    <string name="change_password_content">we recommend choosing a strong password</string>
    <string name="change_password_hint">type your password here\u2026</string>
    <string name="change_password_hint_fill"></string>
    <string name="change_password_positive">Update</string>
    <string name="change_password_negative">@android:string/cancel</string>

    <!-- ADMIN MESSAGES -->
    <string name="dialog_update">Upgrade available.\u000A\u000AWe have some cool and greatest features waiting for you in our latest version\u0021</string>
    <string name="dialog_f_update">You must upgrade SamePinch.\u000A\u000APlease visit Google Play Store to upgrade.</string>
    <string name="dialog_referrals">Loving SamePinch app\u003F\u000A\u000AYou can help us reach more SamePinch\u0027ers around the globe.\u000AUse \u0022Spread Your Love\u0022 feature when you login.</string>
    <string name="dialog_review">A quick appreciation means alot to us\u0021\u000A\u000APlease rate SamePinch app.\u000A\u000AWe read every single review and respond appropriately.</string>
    <string name="dialog_login">Login to organize your posts, likes, topics, etc.\u000A\u000AIt takes a quick moment to create your account incase if you do not have one yet\u0021\u003F</string>
    <string name="dialog_post">Create a POST.\u000A\u000ASamePinch\u0027ers around the globe are here to help you\u0021\u000A\u000AWhat are you waiting for\u003F</string>
    <string name="dialog_ok">DISMISS</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="hint_acc_create">No account yet? Create one</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_create_acc">Create My Account</string>
    <string name="hint_a_member">Already a member? Login</string>
    <string name="hint_comment">comment</string>
    <string name="hint_dislike">dislike</string>
    <string name="hint_edit">edit</string>
    <string name="hint_flag">flag</string>
    <string name="hint_sms">SMS</string>
    <string name="hint_unflag">un-flag</string>
    <string name="hint_like">like</string>
    <string name="hint_curr_pass">your current password</string>
    <string name="hint_new_pass">new password</string>
    <string name="hint_confirm_pass">confirm new password</string>
    <string name="hint_almost_done">almost done.</string>
    <string name="hint_choose_handle">CHOOSE YOUR UNIQUE PINCH HANDLE</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_done">Done</string>
    <string name="hint_wall">Wall</string>
    <string name="hint_you_starred">You Starred</string>
    <string name="hint_wall_name">name</string>
    <string name="hint_wall_handle">handle</string>
    <string name="hint_blog">blog</string>
    <string name="hint_pinch_handle">Pinch Handle</string>
    <string name="hint_about_me">About Me</string>
    <string name="hint_my_blog">My Blog</string>
    <string name="hint_change_pass">change password</string>
    <string name="title_comment">COMMENT</string>
    <string name="title_as_you">as you</string>
    <string name="title_as_anonymous">as anonymous</string>
    <string name="title_update">UPDATE</string>
    <string name="menu_home">Home</string>
    <string name="title_the_app">THE APP</string>
    <string name="menu_spread">Spread Your Love</string>
    <string name="menu_rate">Rate App</string>
    <string name="menu_rules">Rules</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_sys_status">System Status</string>
    <string name="menu_post">Post</string>
    <string name="menu_tags">Tags</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="hint_dot">DOT</string>
    <string name="hint_name">NAME</string>
    <string name="hint_date">DATE</string>
    <string name="hint_pinch_handle_u">PINCH HANDLE</string>
    <string name="hint_views">VIEWS</string>
    <string name="hint_votes">VOTES</string>
    <string name="hint_content">CONTENT</string>
</resources>
