<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="56dp">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/view_avatar"
                    android:layout_width="@dimen/signup_avatar_size"
                    android:layout_height="@dimen/signup_avatar_size"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    android:background="@drawable/avatar_border"
                    android:clickable="true"
                    fresco:placeholderImage="@drawable/camera_blue"
                    fresco:placeholderImageScaleType="fitCenter"
                    fresco:roundAsCircle="true" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:id="@+id/strut1"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_centerHorizontal="true" />
                    <!-- First Name Label -->
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignRight="@+id/strut1"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp">

                        <EditText
                            android:id="@+id/input_fname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_first_name"
                            android:inputType="textCapWords"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                    <!-- Last Name Label -->
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/strut1"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp">

                        <EditText
                            android:id="@+id/input_lname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_last_name"
                            android:inputType="textCapWords"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:id="@+id/strut2"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_centerHorizontal="true" />

                    <!--  Email Label -->
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignRight="@+id/strut2"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp">

                        <EditText
                            android:id="@+id/input_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                </RelativeLayout>


                <!-- Pinch Handle Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/input_pinchHandle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:capitalize="none"
                        android:enabled="false"
                        android:hint="@string/hint_pinch_handle"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>


                <!-- About Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/input_aboutMe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|left"
                        android:hint="@string/hint_about_me"
                        android:imeOptions="actionNone"
                        android:inputType="textAutoCorrect|textCapSentences|textMultiLine"
                        android:lines="1"
                        android:maxLines="999"
                        android:minLines="1"
                        android:scrollHorizontally="false"></EditText>
                </android.support.design.widget.TextInputLayout>


                <!-- Pinch Handle Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/input_blogUrl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:capitalize="none"
                        android:hint="@string/hint_my_blog"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/input_change_password"
                    style="@style/SP_TXT_BTN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="@string/hint_change_pass"
                    android:visibility="gone"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
