<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="56dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/strut2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true" />

        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/strut2"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                style="@style/SP_PASSWORD_CHANGE"
                android:id="@+id/input_password_curr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_curr_pass"
                android:inputType="textVisiblePassword"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:id="@+id/strut3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true" />
        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/strut3"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                style="@style/SP_PASSWORD_CHANGE"
                android:id="@+id/input_password_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textVisiblePassword"
                android:hint="@string/hint_new_pass"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignLeft="@+id/strut3"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                style="@style/SP_PASSWORD_CHANGE"
                android:id="@+id/input_password_new_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textVisiblePassword"
                android:hint="@string/hint_confirm_pass"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

</LinearLayout>
